--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,24 +37,24 @@
             {% if site.about %}
 
             <li class="px1">
-                <a class="text-decoration-none ampstart-label" href="{{site.baseurl}}{{site.about}}">About</a>
+                <a class="text-decoration-none ampstart-label" href="{{site.baseurl}}{{site.about}}">关于</a>
             </li>
             {% endif %} {% if site.contact %}
 
             <li class="px1">
-                <a class="text-decoration-none ampstart-label" href="{{site.baseurl}}{{site.contact}}">Contact</a>
+                <a class="text-decoration-none ampstart-label" href="{{site.baseurl}}{{site.contact}}">联系方式</a>
             </li>
             {% endif %} {% if site.privacy-policy %}
 
             <li class="px1">
-                <a class="text-decoration-none ampstart-label" href="{{site.baseurl}}{{site.privacy-policy}}">Privacy Policy</a>
+                <a class="text-decoration-none ampstart-label" href="{{site.baseurl}}{{site.privacy-policy}}">隐私条款</a>
             </li>
             {% endif %}
 
         </ul>
     </nav>
     <small>
-        &copy; 2017
+        &copy; 2019
     <a href="{{site.baseurl}}">{{site.name}}</a> &nbsp; | &nbsp;  All Rights Reserved.
 
     </small>
