--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,10 +49,10 @@
 
   <ul class="ampstart-sidebar-faq list-reset m0">
   {% if site.contact %}
-    <li class="ampstart-faq-item"><a href="{{ site.baseurl }}{{ site.contact }}" class="text-decoration-none">联系方式</a></li>
+    <li class="ampstart-faq-item"><a href="{{https://xyenergy.github.io/}}{{ site.contact }}" class="text-decoration-none">联系方式</a></li>
   {% endif %}
   {% if site.privacy-policy %}
-    <li class="ampstart-faq-item"><a href="{{ site.baseurl }}{{ site.privacy-policy }}" class="text-decoration-none">隐私条款</a></li>
+    <li class="ampstart-faq-item"><a href="{{https://xyenergy.github.io/}}{{ site.privacy-policy }}" class="text-decoration-none">隐私条款</a></li>
   {% endif %}
   </ul>
 </amp-sidebar>
